--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(util-linux-ng, 2.16, kzak@redhat.com)
+AC_INIT(util-linux-ng, 2.17-rc1, kzak@redhat.com)
 
 AC_PREREQ(2.60)
 
@@ -25,7 +25,7 @@ PACKAGE_VERSION_RELEASE=0
 
 dnl libblkid version
 LIBBLKID_VERSION="$PACKAGE_VERSION_MAJOR.$PACKAGE_VERSION_MINOR.$PACKAGE_VERSION_RELEASE"
-LIBBLKID_DATE="10-Feb-2009"
+LIBBLKID_DATE="20-Nov-2009"
 LIBBLKID_LT_MAJOR=1
 LIBBLKID_LT_MINOR=1
 LIBBLKID_LT_MICRO=0
