libmount: add version.c
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -11,7 +11,8 @@ nodist_mountinc_HEADERS = mount.h
 usrlib_exec_LTLIBRARIES = libmount.la
 libmount_la_SOURCES = $(mountinc_HEADERS)
 
-nodist_libmount_la_SOURCES = mount.h
+nodist_libmount_la_SOURCES = mount.h \
+			     version.c
 
 libmount_la_LIBADD = $(ul_libblkid_la)
 
