--- a/configure.ac
+++ b/configure.ac
@@ -404,6 +404,7 @@ AC_ARG_ENABLE([libmount],
 )
 AC_SUBST([LIBMOUNT_VERSION])
 AC_SUBST([LIBMOUNT_VERSION_INFO])
+AC_DEFINE_UNQUOTED(LIBMOUNT_VERSION, "$LIBMOUNT_VERSION", [libmount version string])
 AM_CONDITIONAL(BUILD_LIBMOUNT, test "x$enable_libmount" = xyes)
 
 
