--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -12,7 +12,8 @@ usrlib_exec_LTLIBRARIES = libmount.la
 libmount_la_SOURCES = $(mountinc_HEADERS)
 
 nodist_libmount_la_SOURCES = mount.h \
-			     version.c
+			     version.c \
+			     utils.c
 
 libmount_la_LIBADD = $(ul_libblkid_la)
 
