build-sys: rewrite TLS detection
 * use more robust tls.m4 from gcc project

   The old version (from util-linux-ng) used AC_TRY_COMPILE. That's
   wrong. We need to use AC_RUN_IFELSE to check that the result is
   link-able and executable.

   The new version also test it TLS really works in multi-thread
   applications.

 * we need to detect TLS usability for cross-compiling

 * this new version supports __thread keyword only, it seems that we
   needn't to care about anything other

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -242,14 +242,7 @@ AC_DEFUN([UTIL_RESTORE_FLAGS], [
 ])
 
 
-AC_ARG_ENABLE([tls],
-  AS_HELP_STRING([--disable-tls], [disable use of thread local support]),
-  [], enable_tls=yes
-)
-if test "x$enable_tls" = xyes; then
-  AX_TLS
-fi
-
+AX_CHECK_TLS
 
 AC_ARG_ENABLE([mount],
   AS_HELP_STRING([--disable-mount], [do not build mount utilities]),
