libmount: add optls (options container)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/Makefile.am
+++ b/shlibs/mount/src/Makefile.am
@@ -12,7 +12,7 @@ usrlib_exec_LTLIBRARIES = libmount.la
 libmount_la_SOURCES = $(mountinc_HEADERS)
 
 nodist_libmount_la_SOURCES = mount.h version.c utils.c test.c init.c cache.c \
-			optstr.c iter.c list.h \
+			optstr.c optmap.c optent.c optls.c iter.c list.h \
 			$(top_srcdir)/lib/canonicalize.c
 
 libmount_la_LIBADD = $(ul_libblkid_la)
@@ -22,7 +22,7 @@ libmount_la_DEPENDENCIES = $(libmount_la_LIBADD) mount.sym mount.h.in
 libmount_la_LDFLAGS = -Wl,--version-script=$(ul_libmount_srcdir)/mount.sym \
                       -version-info $(LIBMOUNT_VERSION_INFO)
 
-tests = test_version test_cache test_optstr
+tests = test_version test_cache test_optstr test_optls
 
 EXTRA_DIST = mount.sym mount.h.in
 CLEANFILES = $(tests)
