libblkid: add support for partition flags/attributes
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/src/blkid.h.in
+++ b/shlibs/blkid/src/blkid.h.in
@@ -279,6 +279,7 @@ extern blkid_loff_t blkid_partition_get_start(blkid_partition par);
 extern blkid_loff_t blkid_partition_get_size(blkid_partition par);
 extern int blkid_partition_get_type(blkid_partition par);
 extern const char *blkid_partition_get_type_string(blkid_partition par);
+extern unsigned long long blkid_partition_get_flags(blkid_partition par);
 extern int blkid_partition_is_logical(blkid_partition par);
 extern int blkid_partition_is_extended(blkid_partition par);
 extern int blkid_partition_is_primary(blkid_partition par);
