libmount: add fstab/mtab/mountinfo lookup routines
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/mount/src/mount.h.in
+++ b/shlibs/mount/src/mount.h.in
@@ -230,6 +230,11 @@ extern int mnt_fs_set_passno(mnt_fs *ent, int passno);
 extern int mnt_fs_get_option(mnt_fs *ent, const char *name,
 				char **value, size_t *valsz);
 
+extern int mnt_fs_match_target(mnt_fs *fs, const char *target, mnt_cache *cache);
+extern int mnt_fs_match_source(mnt_fs *fs, const char *source, mnt_cache *cache);
+extern int mnt_fs_match_fstype(mnt_fs *fs, const char *types);
+extern int mnt_fs_match_options(mnt_fs *fs, const char *options);
+
 /* mtab/fstab line */
 #define MNT_MFILE_PRINTFMT	"%s %s %s %s %d %d\n"
 
@@ -269,8 +274,11 @@ extern mnt_fs *mnt_tab_find_srcpath(mnt_tab *tb, const char *path, int direction
 extern mnt_fs *mnt_tab_find_tag(mnt_tab *tb, const char *tag,
 				const char *val, int direction);
 extern mnt_fs *mnt_tab_find_source(mnt_tab *tb, const char *source, int direction);
-extern mnt_fs *mnt_tab_find_pair(mnt_tab *tb, const char *srcpath,
-	                        const char *target, int direction);
+
+extern int mnt_tab_find_next_fs(mnt_tab *tb, mnt_iter *itr,
+			int (*match_func)(mnt_fs *, void *), void *userdata,
+		        mnt_fs **fs);
+
 extern int mnt_tab_fprintf(mnt_tab *tb, FILE *f, const char *fmt);
 extern int mnt_tab_update_file(mnt_tab *tb);
 
